[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/fontes/Pixel Icons Compilation.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/scripts/upgrade.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="upgrade" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.505882 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_right = 63.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "powerUps   0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -54.0
margin_right = 62.5
margin_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 122.0
margin_bottom = 108.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "life"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 77.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 122.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "velocity"

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 122.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "v"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 122.0
margin_bottom = 80.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "exp"

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 36.0
margin_right = 61.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "k"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 122.0
margin_bottom = 108.0

[node name="Label4" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "attack"

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 74.0
margin_right = 99.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "r"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer4/Button4" to="." method="_on_Button4_pressed"]
